--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -88,11 +88,11 @@
     .right-block
       %ul.sponsors
         %li
-          =link_to image_tag("shutl.png", height: '67px'), "https://github.com/codebar"
+          =link_to image_tag("shutl.png", height: '70px'), "http://shutl.com/uk/"
         %li
-          =link_to image_tag("unboxed.png", height: '67px'), "https://github.com/codebar"
+          =link_to image_tag("unboxed.png", height: '70px'), "http://www.unboxedconsulting.com/"
         %li
-          =link_to image_tag("reevoo.jpg", height: '67px'), "https://github.com/codebar"
+          =link_to image_tag("reevoo.jpg", height: '70px'), "http://www.reevoo.com/"
     .become-a-sponsor
       =link_to "Become a sponsor", new_members_path, class: 'sponsor-button'
 
@@ -101,11 +101,11 @@
     .right-block
       %ul.gallery
         %li
-          =link_to image_tag("pic1.jpg", height: '196px'), "https://github.com/codebar"
+          =link_to image_tag("pic1.jpg", height: '183px'), "https://github.com/codebar"
         %li
-          =link_to image_tag("pic2.jpg", height: '196px'), "https://github.com/codebar"
+          =link_to image_tag("pic2.jpg", height: '183px'), "https://github.com/codebar"
         %li
-          =link_to image_tag("pic3.jpg", height: '196px'), "https://github.com/codebar"
+          =link_to image_tag("pic3.jpg", height: '183px'), "https://github.com/codebar"
 
 
     / =link_to "Become a member", new_members_path, class: 'btn'
