--- a/app/views/members/new.html.haml
+++ b/app/views/members/new.html.haml
@@ -1,25 +1,28 @@
-#new_member
-  %h3 Become a member
-  = simple_form_for @member do |f|
-    .row
-      .half
-        = f.input :name
-      .half
-        = f.input :surname
+%section#member
+  .titlebox.mission
+    %h2 Become a member
+  .description
+    %p.lead
+    = simple_form_for @member do |f|
+      .row
+        .half
+          = f.input :name
+        .half
+          = f.input :surname
 
-    .row
-      .half
-        = f.input :email
-      .half
-        = f.input :twitter
+      .row
+        .half
+          = f.input :email
+        .half
+          = f.input :twitter
 
-    = f.input :about_you, as: :text, label: "Tell us a little bit about yourself"
+      = f.input :about_you, as: :text, label: "Tell us a little bit about yourself"
 
-    %p
-      Select the notifications you would like to receive
-      %br
-      %small e.g. if you would like to attend some of the sessions as a student but you may also be able to help out with coaching sometimes select both <b>Student</b> and <b>Coach</b>
-    = f.association :roles, as: :check_boxes, label: false
+      %p
+        Select the notifications you would like to receive
+        %br
+        %small e.g. if you would like to attend some of the sessions as a student but you may also be able to help out with coaching sometimes select both <b>Student</b> and <b>Coach</b>
+      = f.association :roles, as: :check_boxes, label: false
 
-    .form-footer
-      = f.submit "Join #{t("brand")}"
+      .form-footer
+        = f.submit "Join #{t("brand")}"
