--- a/app/assets/stylesheets/style.css.sass
+++ b/app/assets/stylesheets/style.css.sass
@@ -41,12 +41,12 @@ body
   font-family: proxima-nova, Helvetica, Arial, sans-serif
   font-size: 100%
   background-color: #ebe6e2
+  background: url("images_bg_big_small.jpg") no-repeat scroll 0 0 rgba(0, 0, 0, 0)
 /*border-bottom: 1px dotted $link-purple*/
 
 ul
   list-style: none
   color: $navigation-links-purple
-
 
 .navbar
   font-size: 19px
@@ -72,6 +72,7 @@ ul
   margin-left: 15px
   color: $become-member-white
   box-shadow: 0 1px 1px rgba(114, 98, 154, 0.1)
+
 
 a
   margin: 0
@@ -104,7 +105,8 @@ a
 .right-panel
   max-width: 403px
   vertical-align: top
-  width: 37%
+  width: 34%
+  margin-left: 30px
 
 .siteunder
   font-size: 18px
@@ -148,6 +150,8 @@ a
   width: 25%
 
 .half
+  display: block
+  margin: 20px 20px 0 0
   width: 45%
 
 .third
@@ -176,44 +180,41 @@ a
     margin-right: 10px
 
   input[type="text"], input[type="email"], textarea
+    font-family: inherit
     width: 350px
     height: 35px
     margin-top: 10px
     padding: 5px 15px
-    border-radius: 5px
-    border: none
-    background-color: #e4eae9
+    border-radius: 6px
+    border: 1px solid $nav-block-border
+    background-color: $next-session-grey
     font-size: 1em
+    color: $become-member-grey
 
   .btn, .button, input[type='submit']
-    border: 1px solid #DDDDDD
+    background-color: $become-member-grey
     border-radius: 6px
-    box-shadow: 1px 1px 0 rgba(250, 250, 250, 0.5) inset, -1px -1px 2px rgba(250, 250, 250, 0.1) inset
-    font-size: 23px
-    display: block
-    font-weight: 400
-    padding: 10px 45px
-    text-align: center
-    min-width: 100px
-    margin-bottom: 20px
-
+    padding: 10px 25px
+    margin-left: 15px
+    box-shadow: 0 1px 1px rgba(114, 98, 154, 0.1)
+    font-size: 20px
     &:hover
       box-shadow: 1px 2px 2px  #652f93
 
   .button, input[type='submit']
-    background-color: white
     text-decoration: none
     transition-duration: 0.2s
-    color: #652f93
+    color: $become-member-white
 
 
   textarea
-    height: 100px
-    width: 750px
+    height: 107px
+    width: 805px
 
   .required
     abbr
       color: #F50000
+      border-bottom: none
 
   label
     display: block
@@ -239,8 +240,10 @@ a
     font-size: 0.9em
     background-color: #f6f4f8
 
-  section#main
+  section#main, section#member
     padding-top: 20px
+
+
 
 .right
   text-align: right
@@ -287,7 +290,7 @@ a
 
 .titlebox
   padding: 10px 20px
-  width: 80%
+  width: 83%
   margin: 30px 0 30px
   padding: 20px 40px
   box-shadow: inset 0 0 1px rgba(177, 166, 204, 0.5)
