--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,7 @@
         </div>
         <div class="navigation">
           <ul class="navbar">
+            <li>
               <%= link_to "Wall of Fame", wall_of_fame_path %>
             </li>
             <li>
@@ -41,7 +42,7 @@
     <div id="footer-width">
       <div class="dot-footer"></div>
       <div class="footer-copy">Get in touch: <a href="mailto:hello@codebar.io?Subject=Hello%20Codebar">hello@codebar.io</a></div>
-      <div class="footer-copy right-float">&#169; 2013 Codebar</div>
+      <div class="footer-copy right-float">&#169; 2013 codebar</div>
     </div>
     </footer>
 
