--- a/app/views/courses/show.html.haml
+++ b/app/views/courses/show.html.haml
@@ -1,21 +1,33 @@
-%h1= @course.title
+%section#courses
+  .titlebox.course
+    %h2
+      = @course.title
+    %small= "#{l(@course.date_and_time, format: :website_format)}"
+    .dot
 
-=l(@course.date_and_time)
+  .description
+    %h4= @course.short_description
+    = @course.description.html_safe
+    - if @course.url.present?
+      .right
+        =link_to "read more about the course", @course.url
 
-%h3= @course.short_description
+    - if @course.seats > @course.attending_invitations.length
+      .sub-block
+        =link_to "Sign up to the course", new_members_path, class: 'member-button'
+    - else
+      .sub-block
+        %small
+          %em
+            This course is fully booked! If you would like to receive an invitation to other courses we will be running, you should #{link_to("sign up", new_members_path)}.
 
-.description
-  = @course.description.html_safe
-  - if @course.url.present?
-    .right
-      =link_to "read more about the course", @course.url
+  .description
+    .tutor
+      .avatar
+        =link_to twitter_url_for(@course.tutor.twitter) do
+          =image_tag @course.tutor.avatar
 
-.tutor
-  .avatar
-    =link_to twitter_url_for(@course.tutor.twitter) do
-      =image_tag @course.tutor.avatar
-
-  .about
-    %strong= @course.tutor.full_name
-    =link_to "@#{@course.tutor.twitter}", twitter_url_for(@course.tutor.twitter)
-    %br= @course.tutor.about_you.html_safe
+      .about
+        %strong= @course.tutor.full_name
+        =link_to "@#{@course.tutor.twitter}", twitter_url_for(@course.tutor.twitter)
+        %br= @course.tutor.about_you.html_safe
