--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -9,16 +9,15 @@
       %p.lead
         Making tech more diverse and welcoming by bringing people together and helping teach programming skills.
       %p.lead
-        We organize free sessions in HTML, CSS, Javascript and Ruby and offer guidance on other programming related topics, targeted at different groups of people that are underrepresented in the tech industry.
+        We organise free sessions in HTML, CSS, Javascript, Ruby and offer guidance and advice on a variety of programming related topics. Our target is to help groups of people that are underrepresented in the tech industry.
       %p.lead
         All these, with the help of our
         =link_to "amazing coaches", wall_of_fame_path
-      %br
+        \.
       %p.lead
         %b
-          If you would like to help out, make sure you first read our
-          =link_to "code of conduct", code_of_conduct_path
-
+          Before you continue, you should read our
+          =link_to "code of conduct", "#code-of-conduct"
 
     - if @next_session.present?
       .titlebox.session
@@ -33,9 +32,9 @@
           %h6
             = "on #{l(@next_session.date_and_time, format: :website_format)}"
         %p.lead.move-top
-          We run sessions every week with a different topic, if you would like to attend as a student or help out as a coach you can do so by signing up.
+          We run sessions weekly where we offer guided help in going through HTML/CSS, Javascript and Ruby tutorials - and not just that! There, you will also get the opportunity to meet other people interested in coding and pair with them. If you would like to attend as a student or help out as a coach you can do so by signing up.
         .sub-block
-          =link_to "Become a member", new_members_path, class: 'member-button'
+          =link_to "Sign up to the session", new_members_path, class: 'member-button'
 
     - if @next_course.present?
       .titlebox.course
@@ -52,12 +51,13 @@
           %h6= "on #{l(@next_course.date_and_time, format: :website_format)}"
         %p.lead.move-top
           = @next_course.short_description.html_safe
+          %small
+            =link_to "read more about the course", @next_course
         .sub-block
-          =link_to "Become a member", new_members_path, class: 'member-button'
+          =link_to "Sign up to the course", new_members_path, class: 'member-button'
 
 
-
-    .titlebox.code-of-conduct
+    .titlebox#code-of-conduct
       %h2
         Code of conduct
       .dot
@@ -66,11 +66,10 @@
       %p.lead
         Our events are dedicated to providing a harassment-free experience for everyone, regardless of gender, sexual orientation, disability, physical appearance, body size, race, or religion.
       %p.lead
-        We do not tolerate harassment of our members or coaches in any form. Sexual language and imagery is not appropriate for any of our events, including talks, workshops, parties, Twitter and any other online media. Members violating these rules may be sanctioned or expelled from the event and any future events at the discretion of the organisers.
+        We do not tolerate harassment of our members in any form. Sexual language and imagery is not appropriate for any of our events, including talks, workshops, parties, Twitter and any other online media. Members violating these rules may be sanctioned or expelled from the event and any future events at the discretion of the organisers.
         %br
         %br
-        %b
-          =link_to "Read the full version", code_of_conduct_path
+        =link_to "Read the full version", code_of_conduct_path
 
   .right-panel
     %ul.social
@@ -81,22 +80,22 @@
       %li
         =link_to image_tag("facebook.png", width: '33px'), "https://facebook.com/bycodebar"
     .right-block
-      %h4 Our sponsors:
+      %h4 Sponsors
     .right-block
       %ul.sponsors
         - @sponsors.each do |sponsor|
           %li
             = link_to image_tag(sponsor.avatar, height: '70px'), sponsor.website
     .become-a-sponsor
-      =mail_to "hello@codebar.io", "Sponsoring codebar.io", class: 'sponsor-button'
+      =mail_to "hello@codebar.io", "Sponsor codebar.io", subject: "I would like to sponsor codebar", class: 'sponsor-button'
 
     .right-block
       %h4 Gallery
     .right-block
       %ul.gallery
         %li
-          =link_to image_tag("pic1.jpg", height: '183px'), "https://github.com/codebar"
+          =image_tag("pic1.jpg", height: '183px')
         %li
-          =link_to image_tag("pic2.jpg", height: '183px'), "https://github.com/codebar"
+          =image_tag("pic2.jpg", height: '183px')
         %li
-          =link_to image_tag("pic3.jpg", height: '183px'), "https://github.com/codebar"
+          =image_tag("pic3.jpg", height: '183px')
