order coaches on wall of fame by attendances

--- a/app/assets/stylesheets/style.css.sass
+++ b/app/assets/stylesheets/style.css.sass
@@ -212,7 +212,7 @@ a
   text-align: right
 
 
-.tutor
+.tutor, .coach
   margin-top: 50px
   .avatar, .about
     display: inline-block
@@ -226,6 +226,23 @@ a
 
   .about
     max-width: 500px
+
+#wall-of-fame
+  .coach
+    .about
+      min-width: 300px
+      max-width: 300px
+      line-height: 0.8em
+
+      .name
+        font-size: 0.8em
+
+    .about_you
+      font-size: 0.6em
+
+  li
+    display: inline-block
+    width: 45%
 
 @media(max-width: 900px)
   .left-panel, .right-panel
