--- a/app/views/dashboard/coaches.html.haml
+++ b/app/views/dashboard/coaches.html.haml
@@ -5,15 +5,14 @@
     .dot
   %ul
     - @coaches.each do |coach|
-      %li.tutor
+      %li.coach
         .avatar
           =link_to twitter_url_for(coach.twitter) do
-            =image_tag coach.avatar
+            =image_tag coach.avatar(70)
         .about
-          %strong
-          - if coach.twitter.present?
-            =link_to coach.full_name, twitter_url_for(coach.twitter)
-          - else
-            =coach.full_name
-          %br= coach.about_you.html_safe
-
+          .name
+            - if coach.twitter.present?
+              =link_to coach.full_name, twitter_url_for(coach.twitter)
+            - else
+              =coach.full_name
+          %span.about_you=coach.about_you.html_safe
