fix sponsor logo issue

--- a/app/assets/stylesheets/style.css.sass
+++ b/app/assets/stylesheets/style.css.sass
@@ -373,6 +373,10 @@ a
     li
       margin-top: 0px
 
+.sponsor-logo
+  max-height: 70px
+  max-width: 240px
+
 .become-a-sponsor
   padding: 60px 0 60px 30px
   border-bottom: 1px solid $navigation-gray-separators
