--- a/app/assets/stylesheets/style.css.sass
+++ b/app/assets/stylesheets/style.css.sass
@@ -6,7 +6,7 @@ body
   font-family: proxima-nova, Helvetica, Arial, sans-serif
   font-size: 100%
   background-color: #ebe6e2
-  background: url("background.jpg") no-repeat scroll 0 0 rgba(0, 0, 0, 0)
+  background: image-url("background.jpg") no-repeat scroll 0 0 rgba(0, 0, 0, 0)
 
 ul
   list-style: none
@@ -285,7 +285,7 @@ a
     font-weight: 300
 
   .dot
-    background: url("dot.png") no-repeat scroll 0 0 rgba(0, 0, 0, 0)
+    background: image-url("dot.png") no-repeat scroll 0 0 rgba(0, 0, 0, 0)
     height: 30px
     position: absolute
     right: 8px
@@ -405,7 +405,7 @@ footer
     width: 100%
 
   .dot-footer
-    background: url("dot.png") no-repeat scroll 0 0 rgba(0, 0, 0, 0)
+    background: image-url("dot.png") no-repeat scroll 0 0 rgba(0, 0, 0, 0)
     height: 30px
     width: 30px
     display: inline-block
