--- a/app/assets/stylesheets/style.css.sass
+++ b/app/assets/stylesheets/style.css.sass
@@ -6,7 +6,7 @@ body
   font-family: proxima-nova, Helvetica, Arial, sans-serif
   font-size: 100%
   background-color: #ebe6e2
-  background: image-url("background.jpg") no-repeat scroll 0 0 rgba(0, 0, 0, 0)
+  background: image-url("background.jpg") no-repeat fixed 0 0 rgba(0, 0, 0, 0)
 
 ul
   list-style: none
