apply the typo fix that Andrew pointed out

--- a/app/views/members/new.html.haml
+++ b/app/views/members/new.html.haml
@@ -29,7 +29,7 @@
           %ul
             %li if you are a woman, or
             %li you are part of a group underrepresented in the tech industry, or
-            %li you succesfuly convince at least two people you know, from underrepresented groups, how amazing programming is and get them to join us and start attending our sesions.
+            %li you succesfuly convince at least two people you know, from underrepresented groups, how amazing programming is and get them to join us and start attending our sessions.
 
       .form-footer
         = f.submit "Join #{t("brand")}"
