--- a/app/views/session_invitation_mailer/invite_student.html.erb
+++ b/app/views/session_invitation_mailer/invite_student.html.erb
@@ -17,14 +17,14 @@
 
   <div style="width:150px; border-left: 1px solid #ececec; padding-left: 50px; display: inline-block;">
     <h3 style="color: #434950; font-size: 17px;font-weight: 600;letter-spacing: 0.02em;">Location</h3>
-    <h2 style="color: #2D183D; font-weight: 400; ">ThoughtWorks</h2>
+    <h2 style="color: #2D183D; font-weight: 400; ">Digital Science</h2>
     <p style="color: #434950;font-size: 16px; font-weight: 400;">
-    Berkshire House<br/>
-    168-173 High Holborn<br/>
-    London, WC1V 7AA<br/>
+    The Macmillan Building<br/>
+    4 Crinan Street<br/>
+    London, N1 9XW<br/>
     </p>
-    <a href="http://goo.gl/maps/bDk7N" style="color: #a369d5; text-decoration: underline" >view map</a>
-    <div style="width:120px; height:56px; margin-top: 33px;"><%=image_tag(attachments["thoughtworks.png"].url, width: "120px") %></div>
+    <a href="http://goo.gl/maps/df23L" style="color: #a369d5; text-decoration: underline" >view map</a>
+    <div style="width:120px; height:41px; margin-top: 33px;"><%=image_tag(attachments["digital-science.png"].url, width: "120px") %></div>
   </div>
 
 </div>
