--- a/app/assets/stylesheets/style.css.sass
+++ b/app/assets/stylesheets/style.css.sass
@@ -244,6 +244,9 @@ a
     display: inline-block
     width: 45%
 
+.center
+  text-align: center
+
 @media(max-width: 900px)
   .left-panel, .right-panel
     width: 100%
