--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -80,6 +80,14 @@
       %li
         =link_to image_tag("facebook.png", width: '33px'), "https://facebook.com/bycodebar"
     .right-block
+      %h4 Support us
+    .right-block.center
+      %br
+      %script{ :"data-gittip-username" => "by_codebar", :src => "//gttp.co/v1.js" }
+      %br
+
+    .right-block
+      %br
       %h4 Sponsors
     .right-block
       %ul.sponsors
