Creates no_admins scope in Role model
Issue #34

--- a/app/views/members/new.html.haml
+++ b/app/views/members/new.html.haml
@@ -21,7 +21,7 @@
       = f.input :about_you, as: :text, label: "Tell us a little bit about yourself"
 
       %p
-      = f.association :roles, as: :check_boxes, label: "Sign up as a"
+      = f.association :roles, collection: Role.no_admins, as: :check_boxes, label: "Sign up as a"
       %ul.hint
         %li if you want to learn but also have some programming related skills you want to share, you can select both <b>Student</b> and <b>Coach</b>
         %li
